Projects Page - fixed bug where the Skills figure would break the UI on phone screens

--- a/frontend/src/App/styles/layout/_containers.scss
+++ b/frontend/src/App/styles/layout/_containers.scss
@@ -195,10 +195,12 @@
       }
   
       @media (max-width: 600px) {
+        grid-template-columns: 10rem 60vw;
         grid-gap: 2.25rem 2rem;
       }
   
-      @media (max-width: 450px) {
+      @media (max-width: 460px) {
+        grid-template-columns: 8.5rem 50vw;
         grid-gap: 2.25rem 2.5rem;
       }
     }
